[build-system]
requires = ["setuptools >= 43", "setuptools_scm >= 6.2", "Cython >= 0.29.20"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
]
testpaths = ["tests"]
xfail_strict = true

[tool.setuptools_scm]
write_to = "src/cutadapt/_version.py"

[tool.mypy]
warn_unused_configs = true

[tool.cibuildwheel]
environment = "CFLAGS=-g0"
test-extras = ["dev"]
test-command = ["cd {project}", "pytest"]
