[metadata]
name = cutadapt
author = Marcel Martin
author_email = marcel.martin@scilifelab.se
url = https://cutadapt.readthedocs.io/
description = Adapter trimming and other preprocessing of high-throughput sequencing reads
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
project_urls =
    Changelog = https://cutadapt.readthedocs.io/en/stable/changes.html
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
python_requires = >=3.7
package_dir =
    =src
packages = find:
install_requires =
    dnaio >= 0.7.1
    xopen >= 1.1

[options.entry_points]
console_scripts =
    cutadapt = cutadapt.__main__:main_cli

[options.packages.find]
where = src

[options.package_data]
* = py.typed, *.pyi

[options.extras_require]
dev =
    Cython
    pytest
    pytest-timeout
    pytest-mock
    sphinx
    sphinx_issues
    sphinx_better_subsection
